# ansible_homelab

./: .envrc  .gitignore  .markdownlint.yml  .mise.toml  README.md  Taskfile.yml  ansible.cfg  mkdocs.yml  noxfile.py  noxfile.py.bak  pyproject.toml  readthedocs.yml  requirements.dev.txt  requirements.private.yml  requirements.txt  requirements.yml
.config/ansible/: ansible.cfg  requirements.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-mkdocs.yml
.pdm_backup/: pyproject.toml  requirements.dev.txt  requirements.txt
.ssh/: example_config
.tasks/: ansible.yml  mkdocs.yml
ansible_collections/: .gitignore  README.md
collections/: .gitignore  README.md
collections/my/: README.md
docs/: .readthedocs.yaml  index.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/directories/: collections.md  index.md  plays.md
docs/setup/: index.md
docs/src/: index.md
docs/src/directories/: collections.md  index.md  inventories.md  plays.md
docs/src/setup/: index.md  quick_setup.md
docs/src/usage/: index.md
docs/src/usage/tools/: direnv.md  index.md  mise.md  task.md
docs/usage/: index.md
inventories/: .gitignore  README.md
inventories/homelab/: example.inventory.yml  inventory.example.yml
inventories/onboard/: example.inventory.yml
inventories/weather-monorepo/: example.inventory.yml
plays/: README.md  base-setup.yml  gather-facts.yml  install-pipx.yml  ping.yml  setup-python-env.yml  standard-homelab-setup.yml
plays/config/: setup-zram.yml  (+3 more)
scripts/: .gitignore  ansible_vault_setup.py  prune_git_branches.ps1
(+562 files in other folders)
