[project]
name = "homelab-mgmt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "redjax", email = "5534031+redjax@users.noreply.github.com"},
]
dependencies = [
    "ansible-core>=2.17.2",
    "ansible-doctor>=6.0.2",
    "ansible-runner>=2.4.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
    "nox>=2024.4.15",
    "uv>=0.2.32",
    "yamllint>=1.35.1",
    "PyYaml>=6.0.1",
]
