[project]
name = "homelab-mgmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core>=2.17.5",
    "ansible-doctor>=6.0.2",
    "ansible-runner>=2.4.0",
]

[tool.uv]
dev-dependencies = [
    "nox>=2024.10.9",
    "passlib>=1.7.4",
    "pyyaml>=6.0.2",
    "ruff>=0.7.0",
    "yamllint>=1.35.1",
]
