[project]
name = "docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-section-index>=0.3.10",
    "pymdown-extensions>=10.19.1",
]
